--- a/app/globals.css
+++ b/app/globals.css
@@ -170,3 +170,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
   @apply font-heading;
 }
+
+.swiper-slide {
+  height: auto !important;
+  display: flex;
+  align-items: stretch;
+}
